<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B5B6D2"
    tools:context=".LogIn">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="311dp"
        android:layout_height="216dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/antic_slab"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/antic_slab"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_one"
            android:fontFamily="@font/antic_slab"
            android:onClick="tryData"
            android:text="@string/login_btn"
            android:textSize="20sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/stamp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:elevation="-5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/stamp" />

    <TextView
        android:id="@+id/please"
        android:layout_width="201dp"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/merienda_one"
        android:text="@string/user"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/stamp"
        app:layout_constraintVertical_bias="0.062"
        tools:text="@string/user" />

    <TextView
        android:id="@+id/error"
        android:layout_width="219dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/antic_slab"
        android:text="@string/error"
        android:visibility="invisible"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="22sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/stamp"
        app:layout_constraintEnd_toEndOf="@+id/stamp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.728" />


</android.support.constraint.ConstraintLayout>